# Docker_for_Ariane-2.3.0_03

./: README.md
ARIANE_package_v3/ariane-2.3.0_03/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
ARIANE_package_v3/ariane-2.3.0_03/doc/: Makefile.am  Makefile.in
ARIANE_package_v3/ariane-2.3.0_03/doc/figs/: Makefile.am  Makefile.in
ARIANE_package_v3/ariane-2.3.0_03/doc/manuals/: Makefile.am  Makefile.in
ARIANE_package_v3/ariane-2.3.0_03/examples/: Makefile.am  Makefile.in
ARIANE_package_v3/ariane-2.3.0_03/examples/IDL/: Makefile.am  Makefile.in  README  calpsi.pro  cln  eos.pro  grid  locate  msk  ncdf_lec.pro  palette  psi0.pro  psoff  pson  pson2  pson_square  relec_pos  trace0  trace1  trace2  trace3  xy  xy0
ARIANE_package_v3/ariane-2.3.0_03/examples/Matlab/: HOWTO_change_global_attributs.txt  Makefile.am  Makefile.in  README  a_diag_ts.m  a_geo_grid.m  a_geo_grid_ROMStest.m  a_mask_land.m  a_memory.m  a_psi.m  a_psi_dens.m  a_psi_depth.m  a_psi_salt.m  a_psi_temp.m  a_psi_yz.m  a_scat_all.m  a_scat_dens.m  a_scat_depth.m  a_scat_salt.m  a_scat_temp.m  a_scat_time.m  a_traj.m  a_traj_all.m  a_traj_dens.m  a_traj_depth.m  a_traj_salt.m  a_traj_temp.m  a_traj_time.m  a_water_mass_trans.m  geo_grid_latex.m
ARIANE_package_v3/ariane-2.3.0_03/examples/Matlab/bg_routines/: Makefile.am  Makefile.in  a_bathy.m  a_compute_psi.m  a_compute_psi_yz.m  a_fig_psi.m  a_fig_psi_dens.m  a_fig_psi_depth.m  a_fig_psi_salt.m  a_fig_psi_temp.m  a_fig_psi_yz.m  a_ncga_mars.m  a_ncga_opa.m  a_ncga_roms.m  a_ncga_symphonie.m  a_ncglobatt.m  a_ncreadgrid.m  a_ncrg_mars.m  a_ncrg_opa.m  a_ncrg_roms.m  a_ncrg_symphonie.m  a_projection.m  a_readsec.m  a_ref_psi.m  a_ref_psi_yz.m  a_sectrans.m  a_xy0.m  a_yz0.m  compare_ncloads.m  incload.m  incload_st.m  ncload.m  ncload_st.m  ncnames.m  roms_get_depths.m  roms_zlevs.m
ARIANE_package_v3/ariane-2.3.0_03/examples/NEMO/: Makefile.am  Makefile.in  namelist_quali_backward  namelist_quali_backward_seq  namelist_quali_forward  namelist_quali_forward_seq  namelist_quant_backward  namelist_quant_backward_seq  namelist_quant_forward  namelist_quant_forward_seq
ARIANE_package_v3/ariane-2.3.0_03/examples/ROMS/: Makefile.am  Makefile.in  namelist  namelist_quali_backward  namelist_quali_backward_seq  namelist_quali_forward  namelist_quali_forward_seq  namelist_quant_backward  namelist_quant_backward_seq  namelist_quant_forward  namelist_quant_forward_seq
ARIANE_package_v3/ariane-2.3.0_03/examples/data/: Makefile.am  Makefile.in  reduc_4Dfields.nc  reduc_meshmask.nc
ARIANE_package_v3/ariane-2.3.0_03/examples/qualitative/: Makefile.am  Makefile.in  initial_positions  namelist_check  quali_check.sh  src_go.sh
ARIANE_package_v3/ariane-2.3.0_03/examples/qualitative/validation/: Makefile.am  Makefile.in  ariane_trajectories_qualitative.nc  final.sav  init.sav  initial_positions.txt  output  traj.txt
ARIANE_package_v3/ariane-2.3.0_03/examples/quantitative/: Makefile.am  Makefile.in  namelist_check  quant_check.sh  region_limits  segments  segrid  src_go.sh
ARIANE_package_v3/ariane-2.3.0_03/examples/quantitative/validation/: Makefile.am  Makefile.in  ariane_positions_quantitative.nc  ariane_statistics_quantitative.nc  final.sav  final_pos.txt  init.sav  init_pos.txt  output  sections.txt  stats.txt
ARIANE_package_v3/ariane-2.3.0_03/examples/shell_scripts/: Makefile.am  Makefile.in  create_ariane_name.sh  create_ariane_name_roms.sh  subset_reach_sections.sh  subset_select_sections.sh
ARIANE_package_v3/ariane-2.3.0_03/src/: Makefile.am  Makefile.in
ARIANE_package_v3/ariane-2.3.0_03/src/ariane/: Makefile.am  Makefile.in  ariane.f90  mod_b2c_grid_interpolation.f90  mod_b2c_grid_save.f90  mod_configure.f90  mod_criter0.f90  mod_criter1.f90  mod_criter2.f90  mod_cst.f90  mod_flags.f90  mod_fx.f90  mod_fy.f90  mod_fz.f90  mod_init_particules.f90  mod_input_data.f90  mod_input_data_main.f90  mod_input_grid.f90  mod_lun.f90  mod_memory.f90  mod_namelist.f90  mod_netcdf.f90  mod_netcdf_output.f90  mod_netcdf_write_fast.f90  mod_orca.f90  mod_output_data.f90  mod_posin.f90  mod_precision.F90  mod_print_criters.f90  mod_quant.f90  mod_reducmem.f90  mod_rhostp.f90  mod_save_netcdf.f90  mod_seq.f90  mod_sigma.f90  mod_stati.f90  mod_stats.f90  mod_trajec_subs.f90  mod_txt.f90  mod_w_comput.f90  (+6 more)
ARIANE_package_v3/ariane-2.3.0_03/src/tools/: Makefile.am  Makefile.in  mkseg.f90  mkseg0.f90  mod_region_ind.f90  test_data_and_mask_consistency.f90
